--- a/resume.html
+++ b/resume.html
@@ -384,10 +384,7 @@ div.tocify {
 </div>
 
 
-<p>This page contains information on my educational and professional experience, which can also be accessed in the LinkedIn profile below:</p>
-<ul>
-<li><a href="linkedin.com/in/hannah-briggs-47ab08134">My LinkedIn</a></li>
-</ul>
+<p>This page contains information on my educational and professional experience:</p>
 <div id="education" class="section level2 tabset">
 <h2>Education</h2>
 <div id="gonzaga-university-2012-2016" class="section level3">
