last edits to resume

--- a/resume.html
+++ b/resume.html
@@ -426,7 +426,7 @@ div.tocify {
 </div>
 <div id="publications" class="section level2">
 <h2>Publications</h2>
-<p>The Evidence Consortium on Women’s Groups:</p>
+<p>Policy Brief for the Evidence Consortium on Women’s Groups:</p>
 <ul>
 <li><a href="https://www.popcouncil.org/uploads/pdfs/2020PGY_ECWG-AdolescentGirlsCOVID.pdf">Impact of COVID-19 on Opportunities for Adolescent Girls and the Role of Girls’ Groups</a></li>
 </ul>
